tests/NormalTests/paczka1/fuzzy1/51616637.err
Error in line 1: cRvêyl A977 20,3
Error in line 8: SVn A977 81,4
Error in line 18: SYR930ERjD S391 35,7
